Update 10:

- [NEW] Added support for ThermoC Property Package
- [FIX] Fixed Material Stream cloning on new UI
- [FIX] Fixed viscosity calculations for petroleum fractions
- [FIX] Fixed velocity units in Kinetic Reaction editor (new UI)

Update 9:

- [NEW] Anchored Property Lists
- [NEW] Flowsheet Charts
- [CHG] Updated syntax highlighting for macOS/Linux script editors
- [FIX] Minor bug fixes and enhancements